--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
                         balalalala
                     </div>
                 </div>
+                <div class="col">
+                    <div class="content">
+                        balalalala
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="content">
+                        balalalala
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="content">
+                        balalalala
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="content">
+                        balalalala
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="content">
+                        balalalala
+                    </div>
+                </div>
             </div>
         </main>
 
