--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         <main>
             <div class="row">
                 <div class="col">
-                    <div class="content">
-                        balalalala
+                    <div class="content content1">
+                        <div class="descrizione">
+                            <span class="name">MARCO BIANCHI</span> <br>
+                            <span class="role">Designer</span> <br>
+                            <span class="contact">marcobianchi@team.com</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -61,3 +65,5 @@
     <!-- FINE MAIN -->
 </body>
 </html>
+
+                            
