--- a/index.html
+++ b/index.html
@@ -12,54 +12,59 @@
 </head>
 <body>
     <!-- HEADER -->
-   <header class="container">
-    <h1>Meet Our Team</h1>
-        <div class="apertura"> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, delectus? Natus reprehenderit dolorem necessitatibus, 
-                animi cum sapiente reiciendis non adipisci cupiditate nulla, at nam, tempora doloremque magnam architecto nisi illum!</p>
-        </div>
-        <main>
-            <div class="row">
-                <div class="col">
-                    <div class="content content1">
-                        <div class="descrizione">
-                            <span class="name">MARCO BIANCHI</span> <br>
-                            <span class="role">Designer</span> <br>
-                            <span class="contact">marcobianchi@team.com</span>
+   <div class="container">
+        <header>
+        <h1>Meet Our Team</h1>
+            <div class="apertura"> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, delectus? Natus reprehenderit dolorem necessitatibus, 
+                    animi cum sapiente reiciendis non adipisci cupiditate nulla, at nam, tempora doloremque magnam architecto nisi illum!</p>
+            </div>
+        </header>
+            <main>
+                <div class="row">
+                    <div class="col">
+                        <div class="content">
+                            <img src="img/male1.png" alt="">
+                            <div class="descrizione">
+                                <span class="name">MARCO BIANCHI</span> <br>
+                                <span class="role">Designer</span> <br>
+                                <span class="contact">marcobianchi@team.com</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="content">
+                            balalalala
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="content">
+                            balalalala
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="content">
-                        balalalala
+                <div class="row">
+                    <div class="col">
+                        <div class="content">
+                            balalalala
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="content">
-                        balalalala
+                    <div class="col">
+                        <div class="content">
+                            balalalala
+                        </div>
                     </div>
-                </div>
+                    <div class="col">
+                        <div class="content">
+                            balalalala
+                        </div>
+                    </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="content">
-                        balalalala
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="content">
-                        balalalala
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="content">
-                        balalalala
-                    </div>
-                </div>
-            </div>
+       
+           
         </main>
 
-   </header>
+   </div>
     <!-- FINE HEADER -->
     <!-- MAIN -->
     <!-- FINE MAIN -->
