--- a/index.html
+++ b/index.html
@@ -34,29 +34,54 @@
                     </div>
                     <div class="col">
                         <div class="content">
-                            balalalala
+                            <img src="img/female1.png" alt="">
+                            <div class="descrizione">
+                                <span class="name">LAURA ROSSI</span> <br>
+                                <span class="role">Front-end Developer</span> <br>
+                                <span class="contact">laurarossi@team.com</span>
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="content">
-                            balalalala
+                            <img src="img/male2.png" alt="">
+                            <div class="descrizione">
+                                <span class="name">GIORGIO VERDI</span> <br>
+                                <span class="role">Back-end Developer</span> <br>
+                                <span class="contact">giorgioverdi@team.com</span>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <div class="content">
-                            balalalala
+                            <img src="img/female2.png" alt="">
+                            <div class="descrizione">
+                                <span class="name">MARTA IPSUM</span> <br>
+                                <span class="role">SEO Specialist</span> <br>
+                                <span class="contact">martaipsum@team.com</span>
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="content">
-                            balalalala
+                            <img src="img/male3.png" alt="">
+                            <div class="descrizione">
+                                <span class="name">ROBERTO LOREM</span> <br>
+                                <span class="role">Project Manager</span> <br>
+                                <span class="contact">robertolorem@team.com</span>
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="content">
-                            balalalala
+                            <img src="img/female3.png" alt="">
+                            <div class="descrizione">
+                                <span class="name">DANIELA AMET</span> <br>
+                                <span class="role">Analyst</span> <br>
+                                <span class="contact">danielaamet@team.com</span>
+                            </div>
                         </div>
                     </div>
             </div>
